--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "server": "json-server --watch data/cities.json --port 9000 --delay 500"
   },
   "dependencies": {
+    "iso-country-currency": "^0.7.2",
     "json-server": "^0.17.3",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
+    "react-country-flag": "^3.1.0",
+    "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.22.0"
